@@ -1,6 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.4.38
 
+  *) mod_setenvif: We can have expressions that become true if a regex pattern
+     in the expression does NOT match. In this case val is NULL
+     and we should just set the value for the environment variable 
+     like in the pattern case. [Christophe Jaillet]
+
   *) mod_dav: Fix invalid Location header when a resource is created by
      passing an absolute URI on the request line [Jim Jagielski]
 
